More nginx configuration

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,10 +2,11 @@ version: "3.9"
 services:
   django_web:
     build: .
-    expose:
-      - 8000
+    ports:
+      - "8000:8000"
     volumes:
       - .:/app
+      - static:/static
     env_file:
       - ./.env
     command: >
@@ -23,9 +24,12 @@ services:
       - "5432:5432"
   nginx:
     build: ./nginx
+    volumes:
+      - static:/static
     ports:
-      - 80:80
+      - "80:80"
     depends_on:
       - django_web
 volumes:
+  static:
   postgres-db:
