--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -28,8 +28,16 @@ services:
       - static:/static
     ports:
       - "80:80"
+      - 443:443
     depends_on:
       - django_web
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    volumes: 
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+    command: certonly --webroot -w /var/www/certbot --force-renewal --email keivnbalvarez19@proton.me -d ezdev.us --agree-tos
 volumes:
   static:
   postgres-db:
