--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -10,6 +10,11 @@ server {
         proxy_pass http://django;
     }
 
+
+    location ~ /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
     location /static/ {
         alias /static/;
     }
