--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -26,9 +26,12 @@ services:
     build: ./nginx
     volumes:
       - static:/static
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
     ports:
       - "80:80"
-      - 443:443
+      - "443:443"
     depends_on:
       - django_web
   certbot:
