Nginx conf https

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,6 +6,21 @@ server {
 
     listen 80;
 
+    server_name _;
+
+    return 301 https://$host$request_uri;
+
+}
+
+
+server {
+    listen 443 ssl http2;
+    # use the certificates
+    ssl_certificate     /etc/letsencrypt/live/ezdev.us/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/ezdev.us/privkey.pem;
+    server_name ezdev.us;
+
+
     location / {
         proxy_pass http://django;
     }
@@ -18,5 +33,4 @@ server {
     location /static/ {
         alias /static/;
     }
-
 }
