--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -40,6 +40,8 @@ services:
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
     command: certonly --webroot -w /var/www/certbot --force-renewal --email keivnbalvarez19@proton.me -d ezdev.us --agree-tos
+    depends_on:
+      - nginx
 volumes:
   static:
   postgres-db:
